[package]
name = "github-metrics"
version = "0.1.0"
edition = "2021"
authors = ["Alexis 'Horgix' Chotard <alexis.horgix.chotard@gmail.com>"]
description = "A metrics exporter for GitHub metrics"
repository = "https://github.com/Horgix/github-metrics-exporter"
keywords = ["github", "metrics", "exporter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
chrono = "0.4.19"
hyper = { version = "0.14.19", features = ["server"] }
octocrab = "0.16"
opentelemetry = "0.17.0"
opentelemetry-prometheus = "0.10.0"
prometheus = "0.13.1"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1.18.1", features = ["macros", "rt-multi-thread"] }
