[package]
name = "github-metrics"
version = "0.1.0"
edition = "2021"
authors = ["Alexis 'Horgix' Chotard <alexis.horgix.chotard@gmail.com>"]
description = "A metrics exporter for GitHub metrics"
repository = "https://github.com/Horgix/github-metrics-exporter"
keywords = ["github", "metrics", "exporter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.22"
hyper = { version = "0.14.22", features = ["server"] }
octocrab = "0.17"
opentelemetry = "0.17.0"
opentelemetry-prometheus = "0.11.0"
prometheus = "0.13.3"
serde = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
